#4813 ParallelInference support for input mask arrays